# SudoDog

./: .gitignore  BETA_TESTING.md  CHANGELOG.md  DOCKER_DAEMON_GUIDE.md  INSTALL_GUIDE.md  LICENSE  PRIVACY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README.md.backup  Security.md  TELEMETRY.md  TEST_RESULTS.md  create-platform-v2.sh  create-platform.sh  dashboard-doc.md  dashboard-landing.html  index.html  install.sh  pyproject.toml  query_telemetry.py  realistic_agent.py  requirements.txt  setup.py  sitemap.xml  ssh-keygen -t ed25519 -C "240039317+SudoDog-official@users.noreply.github.com"  ssh-keygen -t ed25519 -C "240039317+SudoDog-official@users.noreply.github.com".pub  sudodog_stats.py  test.sh  test_agent.py  test_dangerous_agent.py  test_docker.py  test_long.py  update.sh  vercel.json
api/: telemetry.py
examples/: demo_agent.py  hello_agent.py
sudodog/: __init__.py  ai_decision_tracker.py  blocker.py  cli.py  cli.py.backup  cli.py.old  cli_http_commands.py  cli_rate_limit.py  cli_telemetry.py  daemon.py  docker_sandbox.py  http_interceptor.py  monitor.py  platform_telemetry.py  rate_limiter.py  sandbox.py  secret_manager.py  setup_docker.sh  sudodog_telemetry.py  telemetry.py  telemetry_ui.py
sudodog-platform/sudodog-platform/: .gitignore  README.md
sudodog/api/: telemetry.py
website/: index.html  install.sh  styles.css  vercel.json
