[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudodog"
version = "0.2.0"
description = "Secure sandbox for AI agents. Blocks dangerous operations, monitors behavior, full audit trail."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SudoDog", email = "support@sudodog.com"}
]
keywords = ["ai-agents", "security", "sandbox", "monitoring", "audit-trail", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "docker>=6.0.0",
]

[project.urls]
Homepage = "https://sudodog.com"
Documentation = "https://github.com/SudoDog-official/sudodog#readme"
"Bug Tracker" = "https://github.com/SudoDog-official/sudodog/issues"
Repository = "https://github.com/SudoDog-official/sudodog"

[project.scripts]
sudodog = "sudodog.cli:cli"

[tool.setuptools]
packages = ["sudodog"]
